manifests/demo/nginx.yaml
apiVersion: v1
kind: Service
metadata:
  name: grimoirelab-gateway
  namespace: demo
  labels:
    app.kubernetes.io/name: grimoirelab
    app.kubernetes.io/component: nginx
spec:
  type: LoadBalancer
  ports:
    - name: http
      port: 80
      targetPort: 80
    - name: https
      port: 443
      targetPort: 443
  selector:
    app.kubernetes.io/name: grimoirelab
    app.kubernetes.io/component: nginx
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grimoirelab-nginx
  namespace: demo
  labels:
    app.kubernetes.io/name: grimoirelab
    app.kubernetes.io/component: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: grimoirelab
      app.kubernetes.io/component: nginx
  template:
    metadata:
      labels:
        app.kubernetes.io/name: grimoirelab
        app.kubernetes.io/component: nginx
    spec:
      containers:
        - name: nginx
          image: nginx:latest
          ports:
            - containerPort: 80
            - containerPort: 443
          readinessProbe:
            httpGet:
              path: /
              port: 443
              scheme: HTTPS
            initialDelaySeconds: 20
            periodSeconds: 10
          volumeMounts:
            - name: nginx-template
              mountPath: /etc/nginx/templates/default.conf.template
              subPath: nginx.conf.template
            - name: nginx-template
              mountPath: /etc/nginx/uwsgi_params
              subPath: uwsgi_params
            - name: sortinghat-static
              mountPath: /sortinghat
              readOnly: true
            - name: tls-cert
              mountPath: /etc/nginx/tls
              readOnly: true
      volumes:
        - name: nginx-template
          configMap:
            name: grimoirelab-nginx-templates
        - name: sortinghat-static
          persistentVolumeClaim:
            claimName: sortinghat-static
        - name: tls-cert
          secret:
            secretName: grimoirelab-gateway-tls
