manifests/demo/opensearch-dashboards.yaml
apiVersion: v1
kind: Service
metadata:
  name: opensearch-dashboards
  namespace: demo
  labels:
    app.kubernetes.io/name: grimoirelab
    app.kubernetes.io/component: opensearch-dashboards
spec:
  ports:
    - name: http
      port: 5601
      targetPort: 5601
  selector:
    app.kubernetes.io/name: grimoirelab
    app.kubernetes.io/component: opensearch-dashboards
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: opensearch-dashboards
  namespace: demo
  labels:
    app.kubernetes.io/name: grimoirelab
    app.kubernetes.io/component: opensearch-dashboards
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: grimoirelab
      app.kubernetes.io/component: opensearch-dashboards
  template:
    metadata:
      labels:
        app.kubernetes.io/name: grimoirelab
        app.kubernetes.io/component: opensearch-dashboards
    spec:
      containers:
        - name: opensearch-dashboards
          image: opensearchproject/opensearch-dashboards:3
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5601
